docs: finish swagger documentation
